// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mapDispatchToProps returns the right keys 1`] = `
Object {
  "fetchCommunityTopics": [Function],
  "selectCommunity": [Function],
  "setTerm": [Function],
  "setTopicSubscribe": [Function],
}
`;

exports[`mapStateToProps returns the right keys 1`] = `
Object {
  "community": null,
  "communityHasTopics": false,
  "filteredTopics": Array [],
  "network": null,
  "pending": true,
  "searchTerm": undefined,
}
`;

exports[`mergeProps sets up functions 1`] = `
Object {
  "community": Object {
    "id": 132,
  },
  "fetchCommunityTopics": [Function],
  "goToTopic": [Function],
  "navigation": Object {
    "navigate": [MockFunction],
  },
  "setTopicSubscribe": [Function],
}
`;
